--- a/config/ThaumicTinkerer.cfg
+++ b/config/ThaumicTinkerer.cfg
@@ -88,8 +88,8 @@ general {
     ####################
 
     kami {
-        # Set to the dimension id wished for bedrock dimension, or 0 to disable
-        I:"Bedrock dimension id"=-19
+        # Set to the dimension id wished for bedrock dimension, or 0 to disable  default=-19
+        I:"Bedrock dimension id"=0
 
         # These ores will not be spawned in the bedrock dimension
         S:"Bedrock dimension ore Blacklist" <
@@ -103,7 +103,7 @@ general {
         I:dimension.nether.id=-1
 
         # Set to false to remove the phantom blocks displayed by the Worldshaper's Seeing Glass.
-        B:placementMirror.blocks.show=true
+        B:placementMirror.blocks.show=false
     }
 
 }
