--- a/config/GraviSuite.cfg
+++ b/config/GraviSuite.cfg
@@ -61,7 +61,7 @@ items {
 ####################
 
 "vajra settings" {
-    B:"Disable Vajra accurate mode"=false
+    B:"Disable Vajra accurate mode"=true
 }
 
 
