--- a/config/GregTech/Unification.cfg
+++ b/config/GregTech/Unification.cfg
@@ -3803,10 +3803,10 @@ specialunificationtargets {
     }
 
     ####################
-    # redstone arsenal
+    # """"redstone arsenal""""
     ####################
 
-    "redstone arsenal" {
+    """""redstone arsenal""""" {
         B:blockCrystalFlux_false=false
         B:blockElectrumFlux_false=false
         B:dustElectrumFlux_false=false
@@ -4313,11 +4313,20 @@ specialunificationtargets {
     }
 
     ####################
-    # tombenpotter's electro-magic tools
+    # """"tombenpotter's electro-magic tools""""
     ####################
 
-    "tombenpotter's electro-magic tools" {
+    """""tombenpotter's electro-magic tools""""" {
         B:plateThaumium_false=false
+    }
+
+    ####################
+    # advancedsolarpanel
+    ####################
+
+    advancedsolarpanel {
+        B:ingotIridium_false=false
+        B:ingotUranium_false=false
     }
 
 }
