--- a/config/biomesoplenty/biomegen.cfg
+++ b/config/biomesoplenty/biomegen.cfg
@@ -18,76 +18,76 @@
     B:Alps=true
     B:Arctic=true
     B:AutumnHills=true
-    B:Badlands=true
+    B:Badlands=false
     B:BambooForest=true
     B:Bayou=true
     B:BirchForest=true
-    B:Bog=true
+    B:Bog=false
     B:BorealForest=true
-    B:Brushland=true
-    B:Canyon=true
+    B:Brushland=false
+    B:Canyon=false
     B:Chaparral=true
     B:CherryBlossomGrove=true
     B:ConiferousForest=true
-    B:ConiferousForestSnow=true
+    B:ConiferousForestSnow=false
     B:Crag=false
-    B:DeadForest=true
+    B:DeadForest=false
     B:DeadForestSnow=true
     B:DeadSwamp=true
-    B:Deadlands=true
+    B:Deadlands=false
     B:DeciduousForest=true
     B:Dunes=true
-    B:Fen=true
+    B:Fen=false
     B:Field=true
     B:FrostForest=true
     B:FungiForest=false
     B:Garden=true
-    B:Glacier=true
+    B:Glacier=false
     B:Grassland=true
     B:Grove=true
     B:Heathland=true
-    B:Highland=true
+    B:Highland=false
     B:HotSprings=true
     B:IcyHills=true
-    B:JadeCliffs=true
+    B:JadeCliffs=false
     B:LavenderFields=true
     B:LushDesert=false
     B:LushSwamp=false
     B:Mangrove=true
     B:MapleWoods=true
-    B:Marsh=true
+    B:Marsh=false
     B:Meadow=true
-    B:Mesa=true
+    B:Mesa=false
     B:Moor=false
     B:Mountain=true
     B:MysticGrove=true
-    B:Oasis=false
-    B:Ocean=true
+    B:Oasis=true
+    B:Ocean=false
     B:OminousWoods=true
     B:Orchard=true
     B:OriginValley=false
     B:Outback=true
     B:OvergrownGreens=true
-    B:Pasture=true
+    B:Pasture=false
     B:Polar=true
-    B:Prairie=true
+    B:Prairie=false
     B:Quagmire=true
     B:Rainforest=true
     B:RedwoodForest=true
     B:SacredSprings=true
     B:Savanna=true
-    B:Scrubland=true
+    B:Scrubland=false
     B:SeasonalForest=true
     B:Shield=true
     B:Shrubland=false
     B:Silkglades=true
-    B:Sludgepit=true
+    B:Sludgepit=false
     B:SpruceWoods=true
-    B:Steppe=true
-    B:Swampwoods=true
-    B:TemperateRainforest=true
-    B:Thicket=true
-    B:Timber=true
+    B:Steppe=false
+    B:Swampwoods=false
+    B:TemperateRainforest=false
+    B:Thicket=false
+    B:Timber=false
     B:TropicalRainforest=true
     B:Tropics=true
     B:Tundra=true
@@ -117,7 +117,7 @@
 
 "ocean biomes to generate" {
     B:"Coral Reef"=true
-    B:"Kelp Forest"=false
+    B:"Kelp Forest"=true
     B:"Oceanic Abyss"=true
 }
 
