--- a/config/biomesoplenty/terraingen.cfg
+++ b/config/biomesoplenty/terraingen.cfg
@@ -96,7 +96,7 @@
 ####################
 
 "biome settings" {
-    B:"Add Biomes To Default World"=false
+    B:"Add Biomes To Default World"=true
     B:"Enhanced Vanilla Biomes"=true
 }
 
@@ -113,7 +113,7 @@
     I:"Distance between villages"=32
 
     # In Vanilla it is set to 10. Takes values from 0 to 100.
-    I:"Landmass Percentage"=25
+    I:"Landmass Percentage"=40
 }
 
 
