--- a/config/biomesoplenty/terraingen.cfg
+++ b/config/biomesoplenty/terraingen.cfg
@@ -27,13 +27,13 @@
     B:Deadlands=false
     B:DeciduousForest=true
     B:Desert=true
-    B:Dunes=false
+    B:Dunes=true
     B:ExtremeHills=false
     B:Fen=false
     B:Field=true
     B:Forest=true
     B:FrostForest=true
-    B:FungiForest=false
+    B:FungiForest=true
     B:Garden=true
     B:Glacier=false
     B:Grassland=true
@@ -43,10 +43,10 @@
     B:HotSprings=true
     B:IcyHills=false
     B:JadeCliffs=false
-    B:Jungle=false
+    B:Jungle=true
     B:LushDesert=true
     B:LushSwamp=true
-    B:Mangrove=false
+    B:Mangrove=true
     B:MapleWoods=true
     B:Marsh=false
     B:Meadow=true
@@ -55,14 +55,14 @@
     B:Mountain=false
     B:MysticGrove=true
     B:Oasis=true
-    B:OminousWoods=false
+    B:OminousWoods=true
     B:Orchard=false
     B:OriginValley=false
     B:Outback=false
     B:OvergrownGreens=true
     B:Pasture=false
     B:Plains=true
-    B:Polar=false
+    B:Polar=true
     B:Prairie=true
     B:Quagmire=false
     B:Rainforest=false
@@ -86,7 +86,7 @@
     B:Tundra=true
     B:Volcano=false
     B:Wasteland=false
-    B:Wetland=false
+    B:Wetland=true
     B:Woodland=true
 }
 
@@ -113,7 +113,7 @@
     I:"Distance between villages"=32
 
     # In Vanilla it is set to 10. Takes values from 0 to 100.
-    I:"Landmass Percentage"=40
+    I:"Landmass Percentage"=60
 }
 
 
