--- a/config/GregTech/DynamicConfig.cfg
+++ b/config/GregTech/DynamicConfig.cfg
@@ -2368,7 +2368,9 @@ canning {
     I:item.spiderEye_100=100
     I:item.venisonCooked_400=400
     I:item.venisonRaw_200=200
+    I:nuggetMercury_100=100
     I:"tconstruct.items.DiamondApple@25c3360c.32767_200"=200
+    I:"tconstruct.items.DiamondApple@2a138349.32767_200"=200
     I:"tconstruct.items.DiamondApple@54f3d297.32767_200"=200
     I:tile.cake_600=600
     I:tile.sand_1600=1600
@@ -4422,6 +4424,7 @@ fuel_5 {
     I:item.ghastTear_500=500
     I:item.liveRoot_16=16
     I:item.wax_6=6
+    I:nuggetMercury_64=64
     I:plateAmber_3=3
     I:plateIronWood_8=8
     I:plateNetherStar_50000=50000
@@ -5602,6 +5605,7 @@ inductionsmelter {
     B:itemToolBronzePickaxe_true=true
     B:itemToolBronzeSpade_true=true
     B:itemToolBronzeSword_true=true
+    B:nuggetMercury_true=true
     B:oreCassiterite_true=true
     B:oreCinnabar_true=true
     B:oreCooperite_true=true
@@ -8789,6 +8793,7 @@ maceration {
 ####################
 
 massfabamplifier {
+    B:dustBlutonium_true=true
     B:dustEnderEye_true=true
     B:dustEnderPearl_true=true
     B:dustGlowstone_true=true
@@ -13622,6 +13627,7 @@ smelting {
     B:dustBatteryAlloy_true=true
     B:dustBeryllium_true=true
     B:dustBlueAlloy_true=true
+    B:dustBlutonium_true=true
     B:dustBrass_true=true
     B:dustBronze_true=true
     B:dustCadmium_true=true
