--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -48,7 +48,7 @@ appeng {
     ####################
 
     vesionchecker {
-        S:lastStarted=hv5rwto7
+        S:lastStarted=hv718ynf
     }
 
 }
