--- a/config/GregTech/DynamicConfig.cfg
+++ b/config/GregTech/DynamicConfig.cfg
@@ -2372,6 +2372,7 @@ canning {
     I:"tconstruct.items.DiamondApple@25c3360c.32767_200"=200
     I:"tconstruct.items.DiamondApple@2a138349.32767_200"=200
     I:"tconstruct.items.DiamondApple@54f3d297.32767_200"=200
+    I:"tconstruct.items.DiamondApple@68ad68e1.32767_200"=200
     I:tile.cake_600=600
     I:tile.sand_1600=1600
 }
