--- a/config/GregTech/DynamicConfig.cfg
+++ b/config/GregTech/DynamicConfig.cfg
@@ -4359,6 +4359,7 @@ canning {
     I:"tconstruct.items.DiamondApple@10ddf724.32767_200"=200
     I:"tconstruct.items.DiamondApple@11118fcb.32767_200"=200
     I:"tconstruct.items.DiamondApple@111bba71.32767_200"=200
+    I:"tconstruct.items.DiamondApple@1208c023.32767_200"=200
     I:"tconstruct.items.DiamondApple@12f496ee.32767_200"=200
     I:"tconstruct.items.DiamondApple@12ff2f41.32767_200"=200
     I:"tconstruct.items.DiamondApple@149d2ac8.32767_200"=200
@@ -4404,7 +4405,9 @@ canning {
     I:"tconstruct.items.DiamondApple@372dc98.32767_200"=200
     I:"tconstruct.items.DiamondApple@3785fa3f.32767_200"=200
     I:"tconstruct.items.DiamondApple@37e30239.32767_200"=200
+    I:"tconstruct.items.DiamondApple@3aff5945.32767_200"=200
     I:"tconstruct.items.DiamondApple@3bff3e38.32767_200"=200
+    I:"tconstruct.items.DiamondApple@3c4c8a4.32767_200"=200
     I:"tconstruct.items.DiamondApple@3d0c0565.32767_200"=200
     I:"tconstruct.items.DiamondApple@3faf2513.32767_200"=200
     I:"tconstruct.items.DiamondApple@3fda6cd8.32767_200"=200
@@ -4435,6 +4438,7 @@ canning {
     I:"tconstruct.items.DiamondApple@5ad3ceb7.32767_200"=200
     I:"tconstruct.items.DiamondApple@5c27ee3a.32767_200"=200
     I:"tconstruct.items.DiamondApple@5eb7930c.32767_200"=200
+    I:"tconstruct.items.DiamondApple@5ec0fd87.32767_200"=200
     I:"tconstruct.items.DiamondApple@600de33f.32767_200"=200
     I:"tconstruct.items.DiamondApple@601064f9.32767_200"=200
     I:"tconstruct.items.DiamondApple@60336aa7.32767_200"=200
@@ -4459,6 +4463,7 @@ canning {
     I:"tconstruct.items.DiamondApple@6b208515.32767_200"=200
     I:"tconstruct.items.DiamondApple@6bc2967.32767_200"=200
     I:"tconstruct.items.DiamondApple@6bdc4403.32767_200"=200
+    I:"tconstruct.items.DiamondApple@6ca20abf.32767_200"=200
     I:"tconstruct.items.DiamondApple@6ce49e20.32767_200"=200
     I:"tconstruct.items.DiamondApple@6df4cdc5.32767_200"=200
     I:"tconstruct.items.DiamondApple@70b35aad.32767_200"=200
