--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -35,6 +35,8 @@ modules {
     B:bb.itemnumb=true
     B:bb.itemtype=true
     B:bb.space=true
+    B:bc.tankamount=true
+    B:bc.tanktype=true
     B:bcapi.consump=true
     B:bcapi.storage=true
     B:bcapi.trigger=true
@@ -87,6 +89,8 @@ server_forcing {
     B:bb.itemnumb=false
     B:bb.itemtype=false
     B:bb.space=false
+    B:bc.tankamount=false
+    B:bc.tanktype=false
     B:bcapi.consump=false
     B:bcapi.storage=false
     B:bcapi.trigger=false
