--- a/config/NEI.cfg
+++ b/config/NEI.cfg
@@ -20,7 +20,7 @@ inventory
 {
 	cheatmode=0
 	gamemodes=creative, creative+, adventure
-	hidden=true
+	hidden=false
 	itemIDs=1
 	layoutstyle=0
 	#For those who can't help themselves.
