--- a/config/powercrystals/minefactoryreloaded/common.cfg
+++ b/config/powercrystals/minefactoryreloaded/common.cfg
@@ -56,7 +56,7 @@ entity {
 
 general {
     # A comma-separated list of entity IDs (e.g.: CaveSpider,VillagerGolem,butterflyGE) to blacklist from the AutoSpawner.
-    S:AutoSpawner.Blacklist=butterflyGE,Luggage,VillagerGolem
+    S:AutoSpawner.Blacklist=butterflyGE,Luggage,VillagerGolem,201,CarmaniteGolem
 
     # The work required to generate a mob in exact mode.
     I:AutoSpawner.Cost.Exact=100
@@ -77,10 +77,10 @@ general {
     B:Conveyor.NeverCapturePlayers=false
 
     # If true, conveyors will NEVER capture Thaumcraft golems regardless of other settings.
-    B:Conveyor.NeverCaptureTCGolems=false
+    B:Conveyor.NeverCaptureTCGolems=true
 
     # If true, the fertilizer will use bonemeal as well as MFR fertilizer. Provided for those who want a less work-intensive farm.
-    B:Fertilizer.EnableBonemeal=false
+    B:Fertilizer.EnableBonemeal=true
 
     # The rate at which fish are dropped from the fishing rod. The drop rate is 1 / this number. Must be greater than 0.
     I:FishDropRate=5
