--- a/config/GregTech/DynamicConfig.cfg
+++ b/config/GregTech/DynamicConfig.cfg
@@ -4416,6 +4416,7 @@ canning {
     I:"tconstruct.items.DiamondApple@41f292ba.32767_200"=200
     I:"tconstruct.items.DiamondApple@44227eea.32767_200"=200
     I:"tconstruct.items.DiamondApple@444d0de4.32767_200"=200
+    I:"tconstruct.items.DiamondApple@44e9f68.32767_200"=200
     I:"tconstruct.items.DiamondApple@458f25b.32767_200"=200
     I:"tconstruct.items.DiamondApple@4649afcd.32767_200"=200
     I:"tconstruct.items.DiamondApple@47669073.32767_200"=200
