--- a/config/AppliedEnergistics.cfg
+++ b/config/AppliedEnergistics.cfg
@@ -217,7 +217,7 @@ me {
         I:storageBusMinTickRate=5
         S:terminalAutoSearch=Autosearch
         B:terminalSearchToolTips=true
-        S:terminalSortBy=Name
+        S:terminalSortBy=ItemID
         S:terminalSortDirection=ASC
         I:terminalUpdateMinTickRate=0
         B:terminalUseLargeFont=false
