--- a/config/FoodPlus.cfg
+++ b/config/FoodPlus.cfg
@@ -7,49 +7,53 @@
 ####################
 
 blocks {
-    I:bananaleaf=546
-    I:bananasapling=545
-    I:beefpie=4079
-    I:candyblock=518
-    I:candydoubleslab=528
-    I:candyflower=529
-    I:candyhalfslab=527
-    I:candystairs=526
-    I:carrotcake=520
-    I:cherryleaf=539
-    I:cherrysapling=540
-    I:chocolatecake=4077
-    I:coconutleaf=544
-    I:coconutsapling=543
-    I:cofeecrop=519
-    I:juicerburning=542
-    I:juiceridle=541
-    I:kiwileaf=537
-    I:kiwisapling=538
-    I:minecraftcake=535
-    I:orangeleaf=531
-    I:orangesapling=532
-    I:partyblock=4083
-    I:peanutcrop=521
-    I:pearleaf=533
-    I:pearsapling=534
-    I:pizza=4078
-    I:pizzacheesecooked=524
-    I:pizzadough=522
-    I:pizzaporkcooked=525
-    I:pizzatomatocooked=523
-    I:pizzazombiecooked=536
-    I:refrigeratorburning=516
-    I:refrigeratoridle=4072
-    I:ricecrop=4074
-    I:saltblock=4082
-    I:saltore=4081
-    I:seaweed=4073
-    I:strawberrybush=530
-    I:strawberrycake=517
-    I:strawberrycrop=4075
-    I:tomatocrop=4076
-    I:worktop=4080
+    I:"Banana leaf"=546
+    I:"Banana sapling"=545
+    I:"Beef pie"=4091
+    I:"Candy block"=518
+    I:"Candy double slab"=528
+    I:"Candy flower"=529
+    I:"Candy half slab"=527
+    I:"Candy stairs"=526
+    I:"Carrot cake"=520
+    I:"Cherry leaf"=539
+    I:"Cherry sapling"=540
+    I:"Chocolate cake"=4083
+    I:"Coconut leaf"=544
+    I:"Coconut sapling"=543
+    I:"Coffee crop"=519
+    I:"Cooked cheese pizza"=524
+    I:"Cooked pork pizza"=525
+    I:"Cooked tomato pizza"=523
+    I:"Grill burning"=550
+    I:"Grill idle"=549
+    I:"Juicer burning"=542
+    I:"Juicer idle"=541
+    I:"Kiwi leaf"=537
+    I:"Kiwi sapling"=538
+    I:"Minecraft cake"=535
+    I:"Orange leaf"=531
+    I:"Orange sapling"=532
+    I:"Party block"=3284
+    I:"Peaf leaf"=533
+    I:"Peanut crop"=521
+    I:"Pear sapling"=534
+    I:Pizza=4090
+    I:"Pizza dough"=522
+    I:"Refrigerator burning"=516
+    I:"Refrigerator idle"=4078
+    I:"Rice crop"=4080
+    I:"Salt block"=4094
+    I:"Salt ore"=4093
+    I:Seaweed=4079
+    I:"Strawberry bush"=530
+    I:"Strawberry cake"=517
+    I:"Strawberry crop"=4081
+    I:"Tomato crop"=4082
+    I:"Walnut leaf"=548
+    I:"Walnut sapling"=547
+    I:Worktop=4092
+    I:"Zombie pizza cooked"=536
 }
 
 
@@ -104,6 +108,9 @@ frequencies {
 
     # Take care, don't put too high values or Minecraft will crash. Change this value if you know what you're doing
     I:strawberrybush=2
+
+    # Take care, don't put too high values or Minecraft will crash. Change this value if you know what you're doing
+    I:walnuttree=1
 }
 
 
@@ -114,238 +121,247 @@ frequencies {
 ####################
 
 items {
-    I:applejuice=5054
-    I:applepie=31732
-    I:appletea=5162
-    I:appleteabag=5170
-    I:bacon=5112
-    I:bagel=5226
-    I:bakedapple=5224
-    I:banana=5200
-    I:basecookie=5188
-    I:beateneggs=31720
-    I:beefpieitem=5052
-    I:blackforestcakecoffee=5159
-    I:blade=5106
-    I:boilingkettle1=5127
-    I:boilingkettle2=5126
-    I:bowl=5234
-    I:bowlofcereal=5028
-    I:bowlofricemeat=5072
-    I:bowlofriceveggie=5071
-    I:breadandbutterpudding=31725
-    I:breadslice=31729
-    I:breadwithbutter=31718
-    I:breadwithnutella=5016
-    I:brochette=5115
-    I:broth=31716
-    I:butter=31727
-    I:cactusgreentea=5166
-    I:cactusgreenteabag=5174
-    I:can=5168
-    I:candyaxe=5083
-    I:candyboots=5103
-    I:candycane=5186
-    I:candychest=5101
-    I:candyhelmet=5100
-    I:candyhoe=5084
-    I:candyleggings=5102
-    I:candypickaxe=5082
-    I:candyspade=5086
-    I:candysprinkles=5155
-    I:candysword=5085
-    I:cangarbage=5108
-    I:caninfinite=5169
-    I:caramel=31711
-    I:carameldonut=5176
-    I:carrotcakeitem=5199
-    I:carrotsoup=5014
-    I:cereal=5027
-    I:cheese=5031
-    I:cheesepastam=5035
-    I:cherry=5201
-    I:cherryjuice=5206
-    I:chickendice=5114
-    I:chips=31722
-    I:chipsfried=5013
-    I:chocolate=31723
-    I:chocolatecakeitem=5050
-    I:chocolatecoffee=5158
-    I:chocolatecookie=5189
-    I:chocolatedonut=5039
-    I:chocolateicecream=5090
-    I:chocolateicecreamcompleted=5093
-    I:chocolatetea=5163
-    I:chocolateteabag=5171
-    I:chocolatewaffle=5187
-    I:coconut=5202
-    I:cofeebean=5105
-    I:cofeemilk=5120
-    I:cofeesolo=5119
-    I:coffeedust=5107
-    I:coffeegrinder=5132
-    I:coffeegrinder1=5134
-    I:coffeegrinder2=5133
-    I:coffeegrinderbroken=5135
-    I:coffeeicecream=5217
-    I:coffeeicecreamcompleted=5218
-    I:coffeeoshroomcoffee=5161
-    I:cookedcarrot=31731
-    I:cookedchickennuggets=5232
-    I:cookedmeat=5060
-    I:cookedmutton=5058
-    I:creamcheese=5225
-    I:creamcheesebagel=5227
-    I:crisps=5036
-    I:dirtymugcoffee=5122
-    I:dirtymugtea=5123
-    I:dishwasher=5128
-    I:donutbase=5038
-    I:donutsprinkles=5178
-    I:dough=5143
-    I:driedtealeaves=5137
-    I:earlgreytea=5165
-    I:earlhreuteabag=5173
-    I:eggbacon=5113
-    I:eggsausage=5111
-    I:filleddishwasher=5129
-    I:filleddishwasher1=5130
-    I:filleddishwasher2=5131
-    I:filledkettle=5125
-    I:filter=5209
-    I:fishandchips=5049
+    I:"Aple juice"=5054
+    I:"Apple pie"=31743
+    I:"Apple tea"=5162
+    I:"Apple tea bag"=5170
+    I:Bacon=5112
+    I:Bagel=5226
+    I:"Baked apple"=5224
+    I:Baklava=5241
+    I:Banana=5200
+    I:"Beaten eggs"=31720
+    I:"Beef pie PLACER"=5052
+    I:"Black coffee"=5119
+    I:"Black forest cake coffee"=5159
+    I:"Black slurpee"=5073
+    I:Blade=5106
+    I:"Blue slurpee"=5079
+    I:"Boiling kettle-state2"=5126
+    I:"Boling kettle-state1"=5127
+    I:"Bowl of cereal"=5028
+    I:"Bowl of rice"=5098
+    I:"Bowl of rice with meat"=5072
+    I:"Bowl of rice with vegetables"=5071
+    I:"Bread and butter pudding"=31725
+    I:"Bread slice"=31730
+    I:"Bread with nutella"=5016
+    I:Brochette=5117
+    I:Broth=31716
+    I:"Brown slurpee"=5074
+    I:Butter=31728
+    I:"Buttered bread"=31718
+    I:"Cactus green tea"=5166
+    I:"Cactus green tea bag"=5174
+    I:Can=5168
+    I:"Candy axe"=5083
+    I:"Candy boots"=5103
+    I:"Candy cane"=5186
+    I:"Candy chest"=5101
+    I:"Candy helmet"=5100
+    I:"Candy hoe"=5084
+    I:"Candy leggings"=5102
+    I:"Candy pickaxe"=5082
+    I:"Candy spade"=5086
+    I:"Candy sprinkles"=5155
+    I:"Candy sword"=5085
+    I:Caramel=31711
+    I:"Caramel donut"=5176
+    I:"Carrot cake PLACER"=5199
+    I:"Carrot soup"=5014
+    I:Cereal=5027
+    I:Cheese=5031
+    I:"Cheese pasta"=5035
+    I:"Cheese pizza slice"=5150
+    I:"Cheese sandwich"=5220
+    I:Cherry=5201
+    I:"Cherry juice"=5206
+    I:"Cherry tomato"=5239
+    I:"Chicken dices"=5114
+    I:Chips=31722
+    I:Chocolate=31723
+    I:"Chocolate cake PLACER"=5050
+    I:"Chocolate coffee"=5158
+    I:"Chocolate cookie"=5189
+    I:"Chocolate donut"=5039
+    I:"Chocolate ice cream"=5090
+    I:"Chocolate ice cream cone"=5093
+    I:"Chocolate milkshake"=5011
+    I:"Chocolate tea"=5163
+    I:"Chocolate tea bag"=5171
+    I:"Chocolate waffle"=5187
+    I:"Clay bowl"=5234
+    I:Coconut=5202
+    I:"Coffe O'Shroom"=5161
+    I:"Coffee bean"=5105
+    I:"Coffee dust"=5107
+    I:"Coffee ginder"=5132
+    I:"Coffee ginder-broken"=5135
+    I:"Coffee ginder-state1"=5134
+    I:"Coffee ginder-state2"=5133
+    I:"Coffee ice cream"=5217
+    I:"Coffee ice cream cone"=5218
+    I:"Cooked carrot"=31732
+    I:"Cooked cheese pizza PLACER"=5148
+    I:"Cooked chicken nuggets"=5232
+    I:"Cooked meat"=5060
+    I:"Cooked mutton"=5058
+    I:"Cooked pork pizza PLACER"=5152
+    I:"Cooked tomato pizza PLACER"=5146
+    I:"Cooked zombie pizza PLACER"=5181
+    I:Cookie=5188
+    I:"Cream cheese"=5225
+    I:"Cream cheese bagel"=5227
+    I:Crisps=5036
+    I:"Dirty coffee mug"=5122
+    I:"Dirty tea mug"=5123
+    I:Dishwasher=5128
+    I:Donut=5038
+    I:"Donut with sprinkles"=5178
+    I:Dough=5143
+    I:"Dried tea leaves"=5137
+    I:"Earl grey tea"=5165
+    I:"Earl grey tea bag"=5173
+    I:"Egg with bacon"=5113
+    I:"Egg with sausages"=5111
+    I:"Filled dishwasher"=5129
+    I:"Filled dishwasher-state1"=5130
+    I:"Filled dishwasher-state2"=5131
+    I:"Filled kettle"=5125
+    I:Filter=5209
+    I:"Fish and chips"=5049
+    I:"Fish with vegetables"=5237
+    I:"French vanilla coffee"=5160
+    I:"Fried calamari"=5194
+    I:"Fried chicken"=5216
+    I:"Fried chips"=5013
+    I:"Fried egg"=5037
+    I:"Fried rice"=5099
+    I:"Frozen milk"=5087
+    I:"Fruit pie"=5195
+    I:Garbage=5108
+    I:"Garbage infinite"=5169
+    I:"Gelatin powder"=5212
+    I:"Gingerpeach tea bag"=5172
+    I:Glass=5053
+    I:"Green slurpee"=5077
+    I:"Grilled Brochette"=5115
+    I:"Grilled cheese sandwich"=5228
+    I:"Grilled fish"=5238
+    I:"Grilled sausage"=5063
+    I:"Gringer tea"=5164
+    I:Hamburger=31729
+    I:"Hardened sweet essence"=5243
+    I:"Hot chocolate"=5096
+    I:"Hot dog"=5064
+    I:"Ice chunk"=5062
+    I:"Ice cream cone"=5088
+    I:"Ice cube"=5069
+    I:"Ice tray"=5067
+    I:"Iced coffee"=5222
+    I:"Iced tea"=5221
+    I:"Instant tea"=5139
+    I:Jelly=5233
+    I:Kebab=5048
+    I:Ketchup=5156
+    I:Kettle=5124
+    I:Kiwi=5203
+    I:"Kiwi juice"=5207
+    I:Knife=5046
+    I:"Light blue slurpee"=5078
+    I:"Liquid chocolate"=5095
+    I:"Magenta slurpee"=5080
+    I:"Mashed potato"=31724
+    I:"Meatball cooked"=5192
+    I:"Melon ice cream"=5091
+    I:"Melon ice cream cone"=5094
+    I:"Minced meat"=5104
+    I:"Minecraft cake PLACER"=5175
+    I:Muffin=31717
+    I:Mug=5121
+    I:Napkin=5210
+    I:"Nether donut"=5179
+    I:Nutella=31721
+    I:Omelette=31719
+    I:Orange=5055
+    I:"Orange juice"=5204
+    I:"Orange slurpee"=5076
+    I:Pasta=31713
+    I:Peanut=5211
+    I:"Peanut butter"=5213
+    I:"Peanut butter and jelly"=5214
+    I:"Peanut butter cookie"=5229
+    I:Pear=5167
+    I:"Pear juice"=5205
+    I:"Pink slurpee"=5081
+    I:"Pizza PLACER"=5051
+    I:"Pizza bagel"=5231
+    I:"Pizza dough PLACER"=5144
+    I:"Pizza slice"=5030
+    I:"Pork pizza slice"=5153
+    I:"Pumpking spice coffee"=5157
+    I:"Purified Wither essence"=5197
+    I:"Purified muffin"=5198
+    I:"Raw cheese pizza"=5147
+    I:"Raw chicken"=5215
+    I:"Raw chicken nuggets"=5230
+    I:"Raw meat"=5059
+    I:"Raw meatball"=5191
+    I:"Raw mutton"=5057
+    I:"Raw pizza"=5032
+    I:"Raw pork pizza"=5151
+    I:"Raw squid"=5196
+    I:"Raw tomato pizza"=5145
+    I:"Raw zombie pizza"=5180
+    I:"Red slurpee"=5075
+    I:Rice=5056
+    I:Salt=5029
+    I:Sandwich=5110
+    I:"Sandwich bread"=5109
+    I:Sausage=5061
+    I:"Seaweed PLACER"=5066
+    I:"Slime donut"=5177
+    I:Slurpee=5070
+    I:Soda=5065
+    I:Spaghetti=31714
+    I:"Steak and chips"=31715
+    I:Stew=31731
+    I:Strawberry=5033
+    I:"Strawberry cake PLACER"=5068
+    I:"Strawberry cookie"=5190
+    I:"Strawberry dipped in hot chocolate"=5097
+    I:"Strawberry donut"=5040
+    I:"Strawberry ice cream"=5089
+    I:"Strawberry ice cream cone"=5092
+    I:"Strawberry jam"=5045
+    I:"Strawberry milkshake"=5034
+    I:"Strawberry seed"=5041
+    I:Sugar=5240
+    I:"Sugar donut"=5141
+    I:Sushi=31726
+    I:Sweet=31712
+    I:"Sweet essence"=5242
+    I:Syrup=5235
+    I:Tea=5140
+    I:"Tea bag"=5138
+    I:"Tea leaves"=5136
+    I:Tentacle=5193
+    I:"Test item"=5142
+    I:Toast=5006
+    I:Tomato=5044
+    I:"Tomato pizza slice"=5149
+    I:"Tomato rice"=5116
+    I:"Tomato sauce"=5118
+    I:"Tomato seed"=5043
+    I:Waffle=5047
+    I:Walnut=5223
+    I:"Whipped cream"=5219
+    I:"White coffee"=5120
+    I:"Wither essence"=5183
+    I:"Withered muffin"=5184
+    I:"Zeus's candy thunder"=5185
+    I:"Zombie pizza slice"=5182
     I:flour=5042
-    I:frenchvanillacoffee=5160
-    I:friedcalamari=5194
-    I:friedchickencooked=5216
-    I:friedegg=5037
-    I:friedrice=5098
-    I:friedricefinal=5099
-    I:frozenmilk=5087
-    I:fruitpie=5195
-    I:gelatinpowder=5212
-    I:gingerpeachtea=5164
-    I:gingerpeachteabag=5172
-    I:glass=5053
-    I:grilledcheesesandwich=5228
-    I:grilledsausage=5063
-    I:hamburger=31728
-    I:hotchocolate=5095
-    I:hotchocolatefinal=5096
-    I:hotdog=5064
-    I:icechunk=5062
-    I:icecreamcone=5088
-    I:icecube=5069
-    I:icedcoffee=5222
-    I:icedtea=5221
-    I:icetray=5067
-    I:instanttea=5139
-    I:jelly=5233
-    I:kebab=5048
-    I:ketchup=5156
-    I:kettle=5124
-    I:kiwi=5203
-    I:kiwijuice=5207
-    I:knife=5046
-    I:meatballcooked=5192
-    I:melonicecream=5091
-    I:melonicecreamcompleted=5094
-    I:milkshake=5011
-    I:mincedmeat=5104
-    I:minecraftcakeitem=5175
-    I:muffin=31717
-    I:mug=5121
-    I:napkin=5210
-    I:netherdonut=5179
-    I:nutella=31721
-    I:omelettefinal=31719
-    I:orange=5055
-    I:orangejuice=5204
-    I:pasta=31713
-    I:peanut=5211
-    I:peanutandjelly=5214
-    I:peanutbutter=5213
-    I:peanutcookie=5229
-    I:pear=5167
-    I:pearjuice=5205
-    I:pizzabagel=5231
-    I:pizzacheesecookeditem=5148
-    I:pizzacheeserawitem=5147
-    I:pizzacheeseslice=5150
-    I:pizzadoughitem=5144
-    I:pizzaitem=5051
-    I:pizzaporkcookeditem=5152
-    I:pizzaporkrawitem=5151
-    I:pizzaporkslice=5153
-    I:pizzaslice=5030
-    I:pizzatomatocookeditem=5146
-    I:pizzatomatorawitem=5145
-    I:pizzatomatoslice=5149
-    I:pizzazombieraw=5180
-    I:pizzazombiereed=5181
-    I:pizzazombieslice=5182
-    I:pumpkingspicecoffee=5157
-    I:purifiedmuffin=5198
-    I:purifiedwitheressence=5197
-    I:rawbrochette=5117
-    I:rawcheesesandwich=5220
-    I:rawchickennuggets=5230
-    I:rawfriedchicken=5215
-    I:rawmeat=5059
-    I:rawmeatball=5191
-    I:rawmutton=5057
-    I:rawpizza=5032
-    I:rawsquid=5196
-    I:rice=5056
-    I:riceTomato=5116
-    I:salt=5029
-    I:sandwich=5110
-    I:sandwichbread=5109
-    I:sausage=5061
-    I:seaweeditem=5066
-    I:slimedonut=5177
-    I:slurpeebase=5070
-    I:slurpeeblack=5073
-    I:slurpeeblue=5079
-    I:slurpeebrown=5074
-    I:slurpeegreen=5077
-    I:slurpeelightblue=5078
-    I:slurpeemagenta=5080
-    I:slurpeeorange=5076
-    I:slurpeepink=5081
-    I:slurpeered=5075
-    I:smashpotato=31724
-    I:soda=5065
-    I:spaghetti=31714
-    I:steakandchips=31715
-    I:stew=31730
-    I:strawberry=5033
-    I:strawberrycakeitem=5068
-    I:strawberrychocolate=5097
-    I:strawberrycookie=5190
-    I:strawberrydonut=5040
-    I:strawberryicecream=5089
-    I:strawberryicecreamcompleted=5092
-    I:strawberryjam=5045
-    I:strawberrymilkshake=5034
-    I:strawberryseed=5041
-    I:sugardonut=5141
-    I:sushi=31726
-    I:sweet=31712
-    I:tea=5140
-    I:teabag=5138
-    I:tealeaves=5136
-    I:tentacle=5193
-    I:testitem=5142
-    I:toast=5006
-    I:tomato=5044
-    I:tomatosauce=5118
-    I:tomatoseed=5043
-    I:waffle=5047
-    I:whippedcream=5219
-    I:witheressence=5183
-    I:withermuffin=5184
-    I:zeuscandythunder=5185
 }
 
 
