--- a/config/minetweaker/main.cfg
+++ b/config/minetweaker/main.cfg
@@ -7,5 +7,13 @@ version 2;
 minetweaker.setAdmins("x_Fame", "FlatronEZ");
 
 # Add your commands here
+#Remove Standart EnderQuarry Recipe
 recipes.removeShaped(tile."extrautils:enderQuarry");
-recipes.addShaped(tile."extrautils:enderQuarry"*1, [[tile.machineBlock, null, null], [null, null, null], [null, null, null]]);
+#Remove BuildeCraft Pump
+recipes.remove(tile.pumpBlock);
+#Quarry to EnderQuarry
+#recipes.addShaped(tile."extrautils:enderQuarry"*1, [[tile.machineBlock, null, null], [null, null, null], [null, null, null]]);
+#Remove Quarry
+recipes.remove(tile.machineBlock);
+#BuildCraft Quarry Recipe for EnderQuarry
+recipes.addShaped(tile."extrautils:enderQuarry"*1, [[item.GT_Components."98", items.ic2.itemPartCircuitAdv, item.GT_Components."98"], [item.GregTech_MetaGenerated_Item_02."31086", item.GT_Components."98", item.GregTech_MetaGenerated_Item_02."31086"], [item.diamondGearItem, items.ic2.itemToolDDrill, item.diamondGearItem]]);
