--- a/config/minetweaker/main.cfg
+++ b/config/minetweaker/main.cfg
@@ -4,16 +4,21 @@ version 2;
 # set your list of server admin usernames here
 # admins are privileged users and will receive
 # any error messages that might occur.
-minetweaker.setAdmins("x_Fame", "FlatronEZ");
+minetweaker.setAdmins("x_Fame");
 
 # Add your commands here
+
 #Remove Standart EnderQuarry Recipe
 recipes.removeShaped(tile."extrautils:enderQuarry");
+
 #Remove BuildeCraft Pump
 recipes.remove(tile.pumpBlock);
+
 #Quarry to EnderQuarry
-#recipes.addShaped(tile."extrautils:enderQuarry"*1, [[tile.machineBlock, null, null], [null, null, null], [null, null, null]]);
+recipes.addShaped(tile."extrautils:enderQuarry"*1, [[tile.machineBlock, null, null], [null, null, null], [null, null, null]]);
+
 #Remove Quarry
 recipes.remove(tile.machineBlock);
+
 #BuildCraft Quarry Recipe for EnderQuarry
-recipes.addShaped(tile."extrautils:enderQuarry"*1, [[item.GT_Components."98", items.ic2.itemPartCircuitAdv, item.GT_Components."98"], [item.GregTech_MetaGenerated_Item_02."31086", item.GT_Components."98", item.GregTech_MetaGenerated_Item_02."31086"], [item.diamondGearItem, items.ic2.itemToolDDrill, item.diamondGearItem]]);
+recipes.addShaped(tile."extrautils:enderQuarry"*1, [[item.GT_Components."98", items.ic2.itemPartCircuitAdv, item.GT_Components."98"], [item.GregTech_MetaGenerated_Item_02."31086", item.GT_Components."98", item.GregTech_MetaGenerated_Item_02."31086"], [item.diamondGearItem, item.GT_Components."99", item.diamondGearItem]]);
