--- a/config/minetweaker/main.cfg
+++ b/config/minetweaker/main.cfg
@@ -18,7 +18,7 @@ recipes.remove(tile.pumpBlock);
 recipes.addShaped(tile."extrautils:enderQuarry"*1, [[tile.machineBlock, null, null], [null, null, null], [null, null, null]]);
 
 #Remove Quarry
-recipes.remove(tile.machineBlock);
+#recipes.remove(tile.machineBlock);
 
 #BuildCraft Quarry Recipe for EnderQuarry
-recipes.addShaped(tile."extrautils:enderQuarry"*1, [[item.GT_Components."98", items.ic2.itemPartCircuitAdv, item.GT_Components."98"], [item.GregTech_MetaGenerated_Item_02."31086", item.GT_Components."98", item.GregTech_MetaGenerated_Item_02."31086"], [item.diamondGearItem, item.GT_Components."99", item.diamondGearItem]]);
+#recipes.addShaped(tile."extrautils:enderQuarry"*1, [[item.GT_Components."98", items.ic2.itemPartCircuitAdv, item.GT_Components."98"], [item.GregTech_MetaGenerated_Item_02."31086", item.GT_Components."98", item.GregTech_MetaGenerated_Item_02."31086"], [item.diamondGearItem, item.GT_Components."99", item.diamondGearItem]]);
