--- a/config/minetweaker/main.cfg
+++ b/config/minetweaker/main.cfg
@@ -4,9 +4,92 @@ version 2;
 # set your list of server admin usernames here
 # admins are privileged users and will receive
 # any error messages that might occur.
-minetweaker.setAdmins("x_Fame");
 
+minetweaker.setAdmins("x_Fame");
 # Add your commands here
+
+
+# Removing Recipes
+
+
+# Rotary Macerator
+recipes.remove(tile.advmachine.macerator);
+
+# Singularit Compressor
+recipes.remove(tile.advmachine.compressor);
+
+# Centrifuge Extractor
+recipes.remove(tile.advmachine.extractor);
+
+# Compact Recycler
+recipes.remove(tile.advmachine.recycler);
+
+# EnderQuarry
 recipes.removeShaped(tile."extrautils:enderQuarry");
+
+# BuildCraft Pump
 recipes.remove(tile.pumpBlock);
+
+# ReactorCasing
+recipes.remove(tile.blockReactorPart."0");
+
+# ReactorController
+recipes.remove(tile.blockReactorPart."1");
+
+# ReactorControllRod
+recipes.remove(tile.blockReactorControlRod);
+
+# YelloriumFuelRod
+recipes.remove(tile.yelloriumFuelRod);
+
+# TurbineHousing
+recipes.remove(tile.blockTurbinePart."0");
+
+# TurbineController
+recipes.remove(tile.blockTurbinePart."1");
+
+# TurbineRotorShaft
+recipes.remove(tile.blockTurbineRotorPart."0");
+
+# TurbineRotorBlade
+recipes.remove(tile.blockTurbineRotorPart."1");
+
+
+# Add Recipes
+
+
+# EnderQuarry
 recipes.addShaped(tile."extrautils:enderQuarry"*1, [[tile.machineBlock, null, null], [null, null, null], [null, null, null]]);
+
+# RotaryMacerator
+recipes.addShaped(tile.advmachine.macerator*1, [[item.railcraft.part.plate, item.railcraft.part.plate, item.railcraft.part.plate], [item.railcraft.part.plate, tile.BlockMetaID_Machine.GT_Macerator, item.railcraft.part.plate], [item.railcraft.part.plate, items.blockAdvMachine, item.railcraft.part.plate]]);
+
+# SingularityCompressor
+recipes.addShaped(tile.advmachine.compressor*1, [[tile.obsidian, tile.obsidian, tile.obsidian], [tile.obsidian, tile.BlockMetaID_Machine.GT_Compressor, tile.obsidian], [tile.obsidian, items.blockAdvMachine, tile.obsidian]]);
+
+# CentrifugeExtractor
+recipes.addShaped(tile.advmachine.extractor*1, [[items.ic2.itemCellWaterElectro, items.ic2.itemCellWaterElectro, items.ic2.itemCellWaterElectro], [items.ic2.itemCellWaterElectro, tile.BlockMetaID_Machine.GT_Extractor, items.ic2.itemCellWaterElectro], [items.ic2.itemCellWaterElectro, items.blockAdvMachine, items.ic2.itemCellWaterElectro]]);
+
+# ReactorCasing
+recipes.addShaped(tile.blockReactorPart."0"*8, [[tile.blockIron, item.ingotGraphite, tile.blockIron], [item.ingotGraphite, item.ingotYellorium, item.ingotGraphite], [tile.blockIron, item.ingotGraphite, tile.blockIron]]);
+
+# ReactorController
+recipes.addShaped(tile.blockReactorPart."1"*1, [[tile.blockReactorPart."0", null, tile.blockReactorPart."0"], [item.ingotYellorium, tile.blockDiamond, item.ingotYellorium], [tile.blockReactorPart."0", tile.blockRedstone, tile.blockReactorPart."0"]]);
+
+# ReactorControllRod
+recipes.addShaped(tile.blockReactorControlRod*1, [[tile.blockReactorPart."0", item.ingotGraphite, tile.blockReactorPart."0"], [item.ingotGraphite, tile.blockRedstone, item.ingotGraphite], [tile.blockReactorPart."0", item.ingotYellorium, tile.blockReactorPart."0"]]);
+
+# YelloriumFuelRod
+recipes.addShaped(tile.yelloriumFuelRod*1, [[tile.blockIron, item.ingotGraphite, tile.blockIron], [item.ingotIron, item.ingotYellorium, item.ingotIron], [tile.blockIron, item.ingotGraphite, tile.blockIron]]);
+
+# TurbineHousing
+recipes.addShaped(tile.blockTurbinePart."0"*4, [[tile.blockIron, tile.brMetal."2", tile.blockIron], [item.netherquartz, tile.brMetal."0", item.netherquartz], [tile.blockIron, tile.brMetal."2", tile.blockIron]]);
+
+# TurbineController
+recipes.addShaped(tile.blockTurbinePart."1"*1, [[tile.blockTurbinePart."0", null, tile.blockTurbinePart."0"], [item.ingotBlutonium, tile.blockDiamond, item.ingotBlutonium], [tile.blockTurbinePart."0", null, tile.blockTurbinePart."0"]]);
+
+# TurbineRotorShaft
+recipes.addShaped(tile.blockTurbineRotorPart."0"*1, [[tile.blockIron, item.ingotCyanite, tile.blockIron], [null, null, null], [null, null, null]]);
+
+# TurbineRotorBlade
+recipes.addShaped(tile.blockTurbineRotorPart."1"*1, [[item.ingotCyanite, tile.blockIron, tile.blockIron], [null, null, null], [null, null, null]]);
